@@ -1,49 +1,66 @@
 package com.fabledruns.korenet;
 
 import net.minecraft.client.MinecraftClient;
+import net.minecraft.client.network.PlayerListEntry;
 
-import java.util.ArrayDeque;
-import java.util.Deque;
+import java.util.ArrayList;
+import java.util.List;
 
 public class PingTracker {
 
     private static final int MAX_SAMPLES = 20;
-    private static final Deque<Integer> samples = new ArrayDeque<>();
-    private static long lastUpdate = 0;
+    private static final List<Integer> samples = new ArrayList<>();
+    private static int progressMs = 0;
 
     public static void tick(int intervalMs) {
-        long now = System.currentTimeMillis();
-        if (now - lastUpdate < intervalMs) return;
-        lastUpdate = now;
+        progressMs += 50;
+        if (progressMs < intervalMs) return;
+        progressMs = 0;
 
         MinecraftClient mc = MinecraftClient.getInstance();
-        if (mc.getNetworkHandler() == null) return;
-        if (mc.player == null) return;
 
-        var entry = mc.getNetworkHandler().getPlayerListEntry(mc.player.getUuid());
+        if (mc.getNetworkHandler() == null || mc.player == null) {
+            clear();
+            return;
+        }
+
+        PlayerListEntry entry = mc.getNetworkHandler().getPlayerListEntry(mc.player.getUuid());
         if (entry == null) return;
-        int ping = entry.getLatency();
-        samples.addLast(ping);
 
-        if (samples.size() > MAX_SAMPLES) {
-            samples.removeFirst();
+        int ping = entry.getLatency();
+
+        synchronized (samples) {
+            samples.add(ping);
+            if (samples.size() > MAX_SAMPLES) {
+                samples.remove(0);
+            }
         }
     }
 
     public static int getPing() {
-        return samples.isEmpty() ? -1 : samples.getLast();
+        synchronized (samples) {
+            return samples.isEmpty() ? -1 : samples.get(samples.size() - 1);
+        }
     }
 
     public static int getJitter() {
-        if (samples.size() < 2) return 0;
+        synchronized (samples) {
+            if (samples.size() < 2) return 0;
 
-        int min = Integer.MAX_VALUE;
-        int max = Integer.MIN_VALUE;
+            int min = Integer.MAX_VALUE;
+            int max = Integer.MIN_VALUE;
 
-        for (int p : samples) {
-            min = Math.min(min, p);
-            max = Math.max(max, p);
+            for (int p : samples) {
+                if (p < min) min = p;
+                if (p > max) max = p;
+            }
+            return max - min;
         }
-        return max - min;
+    }
+
+    public static void clear() {
+        synchronized (samples) {
+            samples.clear();
+        }
     }
 }
